--- a/index.html
+++ b/index.html
@@ -1,7 +1,129 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World!</h1>
-<p>This is a test, this is only a test.</p>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<meta name="author" content="Veselka" />
+		<link href='../../../../fonts.googleapis.com/css@family=Open+Sans_3A400,300,600,700,600italic' rel='stylesheet' type='text/css'>
+		<script src="../../../../ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" ></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
+		<link rel="stylesheet" href="style.css">
+		<title>On-Demand Handyman</title>
+	</head>
+	<body>
+		<header>
+			<div class="wrap">
+				<nav>
+					<ul id="top-menu">
+						<li><a href="#home">Home</a></li>
+                        <li><a href="#services">Our Services</a></li>
+	   			        <li><a href="#services2">Testimonies</a></li>
+						<li><a href="#background">About Us</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+					</ul>
+					<div id="pull">
+				        <span class="btn">Menu</span>
+				    </div>
+				</nav>
+			</div>
+		</header>
+		<section id="home">
+			<img src="image/handy.png" alt="Your logo" />
+			<h1>The perfect fix for your home.</h1>
+		</section>
+              		<section id="services">
+			<div class="wrap">
+				<h2>SERVICES</h2>
+				<div class="col2 first">
+					<img src="image/maintain.jpg" alt="Work service" />
+					<p class="name">Property Maintenance</p>
+					<p class="title">Need to maintain that shit</p>
+				</div>
+				<div class="col2">
+					<img src="image/kick.jpg" alt="Work service" />
+					<p class="name">Appliance Installation &amp; Repair</p>
+					<p class="title">We'll keep kicking it until it works</p>
+				</div>
+			    <div class="col2">
+					<img src="image/organize.jpg" alt="Work service" />
+					<p class="name">Organization &amp; Moving Furniture</p>
+					<p class="title">Unless that shits heavy</p>
+				</div>
+                <div class="col2 first">
+                    <br><br>
+					<img src="image/wife.jpeg" alt="Work service" />
+					<p class="name">Fucking your wife</p>
+					<p class="title">Happy wife, happy life</p>
+				</div>
+                <div class="col2">
+                    <br><br>
+					<img src="image/ranger.jpg" alt="Work Service" />
+					<p class="name">Stealing Picnic Baskets</p>
+					<p class="title">The ranger wont like it</p>
+				</div>
+                <div class="col2">
+                    <br><br>
+					<img src="image/trash.jpg" alt="Work Service" />
+					<p class="name">Trash Removal</p>
+					<p class="title">Tell 'em to get the fuck out</p>
+				</div>
+            </div>
+		</section>
+                		<section>
+			<div class="wrap" id="promo">
+				<p>FOR AN ESTIMATE OR TO SCHEDULE A FREE INSPECTION</p>
+				<a href="default.htm" class="button">CALL NOW</a>
+			</div>
+		</section>
+        		<section id="services2">
+			<div class="wrap">
+				<h2>Reviews</h2>
+				<div class="col3 first">
+					<h3>"He even fixed my prostate cancer!"</h3>
+					<p>After a single visit from the On-Demand Handyman, my prostate cancer is gone and my rectum has never felt better! You're just like Jesus except not imaginary! Thanks non imaginary on-demand Jesus, now I can poop without screaming!<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Pope Benedict XVI </p>
+				</div>
+				<div class="col3">
+					<h3>"STOP FUCKING MY WIFE!"</h3>
+					<p>YOU SON OF A BITCH WHEN I FIND YOU IM GOING TO CUT OFF YOUR BALLS AND FEED THEM TO YOU, I HOPE YOU GET CANCER IN YOUR ASSHOLE YOU PIECE OF SHIT!!!!!<BR><Br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Husband of Satisfied Customer</p>
+				</div>
+			</div>
+		</section>
+ 
+		<section id="background">
+			<div class="wrap">
+				<h2>Background</h2>
+				<p>I fix shit. I am the king of fixing shit. That little bitch Fix-it Felix aint got shit on me, he can go fix-it fuck himself. I don't need some gay magical hammer to fix shit...just duct tape, some jergens lotion and a bucket of chicken.  Original recipe, not that extra crispy bullshit. I'll fix anything, I don't give a fuck what it is, it doesn't even have to be broken.  I even fixed my dogs so they'd stop humping the chunky neighbor kid everytime he waddled his fat ass passed the driveway.  Didn't want to, that shit was funny, but his whore mom kept threatning to call animal control.  Fuck her, bitch looks like she ate honey boo boo for a snack. I fix shit so well the president had me fix his wife.  Her mouth kept making sounds so I fixed it, with my cock. Now the CIA and FBI call me the fixer, and the presidents wife calls me daddy. If you got shit thats broken, then stop breaking shit you beligerent fuck.  You can also call me to fix it, I guess.  Cash only please.  I used to accept your girlfriends titties as payment, but they're already mine so only cash.  If you try to pay with change I'll uppercut your taint because homey don't play that.</p>
+				<p>Disclaimer: If I can't fix it, fuck you.  That's your problem.  No refunds.</p>
+			</div>
+		</section>
+                   		<section id="contact">
+			<div class="wrap">
+				<h2>LET US KNOW WHAT YOU NEED DONE</h2>
+				<div class="col2 first">
+					On-Demand Handyman<br />
+					Salt Lake City, UT<br />
+					United States<br /><br />
+					(801) 555-6969<br />
+					chris@repairmanutah.com
+				</div>
+				<div class="col4">
+					<form class="contactform">
+						<label class="col1 first" for="name">Name:</label>
+						<input type="text" name="name" id="name" class="col2" />
+						<label class="col1" for="phone">Phone:</label>
+						<input type="text" name="email" id="email" class="col2" />
+						<div class="clearfix"></div>
+						<label class="col1 first" for="message">Message:</label>
+						<textarea class="col5" rows="5" name="message" id="message"></textarea>
+						<input class="button clearfix" type="button" value="Send message" />
+					</form>
+				</div>
+			</div>
+		</section>
+		<footer>
+			Website Administrator: admin@repairmanutah.com
+                    </footer>
+	</body>
 </html>
